platform/charts/kyverno/restrict-image-registries-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
  annotations:
    policies.kyverno.io/subject: Pod
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-registries
      match:
        any:
          - resources:
              kinds:
                - Pod
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: "Unknown image registry."
        pattern:
          spec:
            =(ephemeralContainers):
              - image: "europe-west4-docker.pkg.dev/xebia-k8s-training-1/*"
            =(initContainers):
              - image: "europe-west4-docker.pkg.dev/xebia-k8s-training-1/*"
              - image: "gcr.io/istio-release"
            containers:
              - image: "europe-west4-docker.pkg.dev/xebia-k8s-training-1/*"
